# Helmet-Detection

./: .gitignore  CONTRIBUTING.md  GITHUB_SETUP_SUMMARY.md  LICENSE  PROJECT_ORGANIZATION_SUMMARY.md  README.md  SECURITY.md  environment.yml  main.py  main_simple.py  pyproject.toml  quantitative_evaluation.md  requirements.txt  setup.py  start_training.bat  technical_report.txt  test_camera.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Map/: project_roadmap.md  workflow_diagram.mermaid
config/: data.yaml  deployment_config.yaml  model_config.yaml  train_config.yaml
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: CAMERA_TESTING.md  PROFESSIONAL_FEATURES.md  PROJECT_STATUS.md  README.md
models/optimized/: .gitkeep
models/trained/: .gitkeep
outputs/predictions/: .gitkeep
scripts/: advanced_test.py  debug_dataset.py  generate_plots.py  simple_test.py  test_app.py  test_camera.py  test_plot.py  test_write.py  verify_training_setup.py
src/core/: __init__.py  inference.py  model.py
src/desktop_app/: __init__.py  camera_handler.py  detection_display.py  main_window.py
src/scripts/: __init__.py  dataset_unifier.py  train_model.py
src/utils/: __init__.py  data_processing.py  logger.py
tests/: .gitkeep  conftest.py  test_basic.py  test_core.py  test_scripts.py
